--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,7 @@
 <app-navbar></app-navbar>
 
 <!-- Section for Programs -->
-<div id="programs" class="section">
-  <h1>Programs</h1>
-  <p>This is the Programs section.</p>
-</div>
+<app-program></app-program>
 
 <!-- Section for Admissions -->
 <div id="admissions" class="section">
