--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,13 +4,7 @@
 <app-program></app-program>
 
 <!-- Section for Admissions -->
-<div id="admissions" class="section">
-  <h1>Admissions</h1>
-  <p>This is the Admissions section.</p>
-</div>
+<app-admission></app-admission>
 
 <!-- Section for Events -->
-<div id="events" class="section">
-  <h1>Events</h1>
-  <p>This is the Events section.</p>
-</div>
+<app-event></app-event>
