--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="bg-gray-800">
+<nav class="bg-gray-800 sticky top-0 z-50">
     <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
       <div class="relative flex h-16 items-center justify-between">
         
@@ -47,7 +47,7 @@
     </div>
   
     <!-- Mobile menu -->
-    <div *ngIf="showMenu" class="sm:hidden" id="mobile-menu">
+    <div *ngIf="showMenu" class="sm:hidden " id="mobile-menu">
       <div class="space-y-1 px-2 pb-3 pt-2">
         <a href="#programs"
            (click)="setActiveSection('programs')"
