--- a/src/app/program/program.component.html
+++ b/src/app/program/program.component.html
@@ -1,6 +1,5 @@
-<div id="program" class="bg-white">
-    <div class="mx-auto max-w-7xl py-32 sm:py-48 lg:py-56 flex flex-col sm:flex-row items-center">
-      <!-- Text Content (Left side on larger screens, stacked on smaller screens) -->
+<div id="programs" class="bg-white">
+    <div class="mx-auto max-w-7xl py-32 sm:py-48 lg:py-40 flex flex-col sm:flex-row items-center">
       <div class="flex-1 text-center">
         <h1 class="text-5xl font-semibold tracking-tight text-gray-900 sm:text-7xl">Our Programs</h1>
         <p class="mt-8 text-lg font-medium text-gray-500 sm:text-xl">Learn more about our courses at the Yale School of Arts</p>
@@ -9,8 +8,6 @@
           <a href="#" class="text-sm font-semibold text-gray-900">Learn more <span aria-hidden="true">→</span></a>
         </div>
       </div>
-  
-      <!-- Image Content (Right side on larger screens, stacked on smaller screens) -->
       <div class="flex-1 mt-12 sm:mt-0 p-4 sm:p-0">
         <img src="program.jpg" alt="Program Image" class="rounded-lg shadow-lg w-full object-cover h-full">
       </div>
