Add event section

--- a/src/app/program/program.component.html
+++ b/src/app/program/program.component.html
@@ -9,7 +9,7 @@
         </div>
       </div>
       <div class="flex-1 mt-12 sm:mt-0 p-4 sm:p-0">
-        <img src="program.jpg" alt="Program Image" class="rounded-lg shadow-lg w-full object-cover h-full">
+        <img src="program.png" alt="Program Image" class="rounded-lg shadow-lg w-full object-cover h-full">
       </div>
     </div>
   </div>
