--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -1,7 +1,7 @@
 <div id="events" class="bg-white py-24 sm:py-32">
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
       <div class="mx-auto max-w-2xl lg:mx-0">
-        <h2 class="text-pretty text-4xl font-semibold tracking-tight text-gray-900 sm:text-5xl">Upcoming Events at Yale School of Art</h2>
+        <h2 class="text-pretty text-4xl font-semibold tracking-tight text-gray-900 sm:text-5xl">Upcoming Events</h2>
         <p class="mt-2 text-lg/8 text-gray-600">Join us for these exciting events and workshops designed to help you expand your artistic practice.</p>
       </div>
       
